--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.5",
+    "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
